# prospectus_reading

./: .env.example  .gitignore  FIXES.md  FUTURE_IMPROVEMENTS.md  README.md  pyproject.toml
extractor/: __init__.py  cli.py  orchestrator.py
extractor/agents/: __init__.py  critic_agent.py  explorer_agent.py  planner_agent.py  reader_agent.py
extractor/core/: __init__.py  config.py  constraint_parser.py  cost_tracker.py  document_knowledge.py  errors.py  field_searchers.py  field_strategy.py  fund_names.py  graph_store.py  knowledge_consolidator.py  llm_client.py  llm_router.py  pdf_reader.py  pipeline_logger.py  smart_chunker.py  table_extraction.py  umbrella_page_selector.py  value_helpers.py
extractor/phases/: __init__.py  assembly_phase.py  entity_resolution_phase.py  exploration_phase.py  external_ref_scan_phase.py  extraction_phase.py  logic_phase.py  phase_base.py  planning_phase.py  resolver_phase.py  skeleton_phase.py  table_scan_phase.py
extractor/prompts/: __init__.py  critic_prompt.py  explorer_prompt.py  planner_prompt.py  reader_prompt.py
extractor/pydantic_models/: __init__.py  constraints.py  critic_models.py  exploration_models.py  extraction_models.py  graph_models.py  llm_responses.py  logic_models.py  output.py  pipeline.py  planning_models.py  provenance.py  recipe_models.py
extractor/tests/: __init__.py  conftest.py  test_assembly.py  test_config.py  test_constraint_parser.py  test_errors.py  test_field_searchers.py  test_field_strategy.py  test_integration.py  test_kg_integration.py  (+5 more)
visualizer/: __init__.py  define_html_template.py  generate_html_report.py  render_extracted_values.py
(+9 files in other folders)
