[project]
name = "prospectus-v2"
version = "0.1.0"
description = "UCITS prospectus entity extraction using autonomous agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf==1.26.6",
    "pymupdf-layout==1.26.6",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.14.3",
    "instructor>=1.12.0",
    "json-repair>=0.30.0",
]

[project.scripts]
extract = "extractor.cli:main"
visualize = "visualizer.generate_html_report:main"

[tool.setuptools.packages.find]
include = ["extractor*", "visualizer*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "vulture>=2.14",
]
